scalaplugin/src/test/resource/acyclic/src/test/resources/success/pkg/halfacyclic/b/B2.scala
package success.halfacyclicpackage
package b

class B2 extends a.A2{

}
