scalaplugin/src/test/resource/acyclic/src/test/resources/fail/indirect/C.scala
package fail.indirect

class C {
  val a = A
}
